Fix switching frames when painting at the same time

Fixes T3930
BUG:369191