libs/image/tests/kis_image_animation_interface_test.cpp
@@ -267,5 +267,42 @@ void KisImageAnimationInterfaceTest::testSwitchFrameWithUndo()
     p.image->waitForDone();
     QCOMPARE(i->currentTime(), 16);
 }
+#include "kis_processing_applicator.h"
+void KisImageAnimationInterfaceTest::testSwitchFrameHangup()
+{
+    QRect refRect(QRect(0,0,512,512));
+    TestUtil::MaskParent p(refRect);
+
+    KisPaintLayerSP layer1 = p.layer;
+
+    layer1->getKeyframeChannel(KisKeyframeChannel::Content.id(), true);
+
+    KisImageAnimationInterface *i = p.image->animationInterface();
+    KisPaintDeviceSP dev1 = p.layer->paintDevice();
+
+    KisKeyframeChannel *channel = dev1->keyframeChannel();
+    channel->addKeyframe(10);
+    channel->addKeyframe(20);
+
+
+    QCOMPARE(i->currentTime(), 0);
+
+    i->requestTimeSwitchWithUndo(15);
+    QTest::qWait(100);
+    p.image->waitForDone();
+    QCOMPARE(i->currentTime(), 15);
+
+    KisProcessingApplicator applicator(p.image, 0);
+
+    i->requestTimeSwitchWithUndo(16);
+
+    applicator.end();
+
+    QTest::qWait(100);
+    p.image->waitForDone();
+    QCOMPARE(i->currentTime(), 16);
+
+
+}
 
 QTEST_MAIN(KisImageAnimationInterfaceTest)
